fix: Check api_result scope for RAGAS validation

--- a/investigator_ai_ragas_evaluation.ipynb
+++ b/investigator_ai_ragas_evaluation.ipynb
@@ -1337,7 +1337,7 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 57,
+      "execution_count": 62,
       "metadata": {},
       "outputs": [
         {
@@ -1371,7 +1371,7 @@
             "            - Account Type: Business\n",
             "            - Customer Risk Rating: High\n",
             "            - Destination Country: Iran\n",
-            "            - Timestamp: 2025-08-02T16:12:15.844145\n",
+            "            - Timestamp: 2025-08-02T16:20:00.133925\n",
             "            \n",
             "            Please conduct a comprehensive fraud investigation including:\n",
             "            1. Regulatory compliance assessment\n",
@@ -1411,26 +1411,26 @@
             "\n",
             "**Jurisdiction Assessment:**\n",
             "- **Destination Country Risk Classification:** High\n",
-            "- **Applicable Sanctions or Restrictions:** Iran is subject to comprehensive sanctions by the Office of Foreign Assets Control (OFAC). Recent updates include non-proliferation designations and specific Iran-related sanctions as of July 31, 2025.\n",
-            "- **Enhanced Due Diligence Requirements:** Transactions involving Iran require enhanced due diligence due to the high-risk nature and comprehensive sanctions. This includes verifying the legitimacy of the transaction and ensuring no sanctioned entities are involved.\n",
+            "- **Applicable Sanctions or Restrictions:** Iran is subject to comprehensive sanctions by the Office of Foreign Assets Control (OFAC). Recent updates include Iran-related designations and issuance of general licenses, which are necessary for any authorized activities involving Iran.\n",
+            "- **Enhanced Due Diligence Requirements:** Transactions involving Iran require enhanced due diligence, including verifying the legitimacy of the transaction and ensuring compliance with all applicable sanctions.\n",
             "\n",
             "**Regulatory Compliance:**\n",
             "- **Relevant AML/BSA Requirements:** Under the FFIEC BSA/AML Examination Manual, U.S. banks must comply with reporting requirements under section 104(e)(1)(B) of CISADA (31 CFR 1060.300). This includes reporting on correspondent accounts for Iranian-linked financial institutions and any fund transfers involving Iran.\n",
-            "- **Filing Obligations:** A Suspicious Activity Report (SAR) is required due to the high-risk jurisdiction and potential involvement of sanctioned entities. Immediate filing is recommended.\n",
-            "- **Regulatory Deadlines and Thresholds:** The transaction amount of $75,000 exceeds the threshold for mandatory reporting under the Bank Secrecy Act (BSA).\n",
+            "- **Filing Obligations:** A Suspicious Activity Report (SAR) is required due to the high-risk nature of the transaction and the involvement of a sanctioned jurisdiction. Additionally, any transactions over $10,000 involving foreign accounts may require a Currency Transaction Report (CTR) or Foreign Bank and Financial Accounts Report (FBAR).\n",
+            "- **Regulatory Deadlines and Thresholds:** Immediate SAR filing is necessary due to the involvement of a high-risk jurisdiction and potential sanctions violations.\n",
             "\n",
             "**Risk Indicators:**\n",
-            "- **Suspicious Patterns Identified:** Large international wire transfer to a high-risk jurisdiction (Iran) with a high-risk customer profile (Global Trading LLC).\n",
-            "- **Red Flags from Regulatory Guidance:** The transaction involves a jurisdiction under comprehensive sanctions, which is a significant red flag.\n",
-            "- **Industry-Specific Considerations:** Businesses dealing with high-risk jurisdictions like Iran are subject to increased scrutiny and regulatory requirements.\n",
+            "- **Suspicious Patterns Identified:** Large international wire transfer to a high-risk jurisdiction (Iran) by a high-risk customer (Global Trading LLC).\n",
+            "- **Red Flags from Regulatory Guidance:** The transaction involves a jurisdiction under comprehensive sanctions, which is a significant red flag for potential money laundering or sanctions evasion.\n",
+            "- **Industry-Specific Considerations:** Businesses involved in international trade with high-risk jurisdictions must be scrutinized for compliance with international sanctions and AML regulations.\n",
             "\n",
             "**Regulatory Sources:**\n",
-            "- **FFIEC BSA/AML Examination Manual**: Provides guidance on due diligence and reporting requirements for transactions involving Iran.\n",
-            "- **OFAC Recent Actions**: Details recent sanctions updates and designations related to Iran as of July 31, 2025.\n",
+            "- **FFIEC BSA/AML Examination Manual**: Provides guidance on customer due diligence and reporting requirements for transactions involving sanctioned countries.\n",
+            "- **OFAC Recent Actions**: Details recent sanctions list updates and Iran-related designations.\n",
+            "- **31 CFR 1060.300**: Specifies reporting requirements under CISADA for transactions involving Iran.\n",
             "\n",
             "**PROFESSIONAL STANDARDS:**\n",
-            "- This transaction involves a high-risk jurisdiction under active regulatory scrutiny, requiring immediate attention and compliance action.\n",
-            "- The transaction should be flagged as **HIGH PRIORITY** due to the involvement of a comprehensively sanctioned country and the potential need for immediate SAR filing.\n",
+            "- This transaction is flagged as **HIGH PRIORITY** due to the involvement of a sanctioned country (Iran) and the potential for sanctions violations. Immediate compliance actions, including SAR filing, are required to mitigate regulatory risks.\n",
             "\n",
             "**Supervisor**: Routing investigation to evidence_collection agent for specialized analysis.\n",
             "\n",
@@ -1464,33 +1464,22 @@
             "\n",
             "**Financial Intelligence:**\n",
             "- **Entity Background:** Global Trading LLC is a global sourcing company established in 2005, primarily involved in the home furnishings and building industries.\n",
-            "- **Beneficial Ownership:** Not explicitly identified in the current search results.\n",
+            "- **Beneficial Ownership:** Information not explicitly available; further investigation may be required to identify ultimate beneficial owners.\n",
             "- **Business Activity:** The company is involved in legitimate business activities related to global sourcing for home furnishings and building industries.\n",
-            "- **Market Context:** The transaction is atypical given the high-risk jurisdiction and the nature of the company's usual business activities.\n",
+            "- **Market Context:** The transaction aligns with industry norms for international trade, but the destination country poses significant compliance risks due to sanctions.\n",
             "\n",
             "**Transaction Anomalies:**\n",
-            "- **Unusual Patterns:** Large international wire transfer to a high-risk jurisdiction (Iran) with a high-risk customer profile.\n",
-            "- **Red Flags:** High-risk destination country under comprehensive sanctions, high-risk customer rating.\n",
-            "- **Comparative Analysis:** The transaction is inconsistent with typical business activities of Global Trading LLC, which focuses on home furnishings and building industries.\n",
+            "- **Unusual Patterns:** Large international wire transfer to a high-risk jurisdiction.\n",
+            "- **Red Flags:** High-risk destination (Iran), high-risk customer rating, and the involvement of a business account.\n",
+            "- **Comparative Analysis:** The transaction size is significant but not unusual for a business account; however, the destination country raises substantial red flags.\n",
             "\n",
             "**Supporting Evidence:**\n",
-            "- **Exchange Rate Verification:** Unable to verify due to API key unavailability.\n",
-            "- **External Intelligence:** Information gathered from business registries and company profiles.\n",
-            "- **Data Quality Assessment:** High confidence in collected evidence, though exchange rate verification is pending.\n",
+            "- **Exchange Rate Verification:** Unable to verify due to exchange rate API key unavailability. Manual verification recommended.\n",
+            "- **External Intelligence:** Information from ZoomInfo and company profiles indicates legitimate business operations but does not provide detailed financial insights.\n",
+            "- **Data Quality Assessment:** High confidence in collected evidence, but further verification of exchange rates and beneficial ownership is recommended.\n",
             "\n",
             "**ANALYTICAL STANDARDS:**\n",
-            "- The transaction involves a high-risk jurisdiction and a high-risk customer, necessitating immediate attention.\n",
-            "- The risk score of 1.00 indicates a critical level of risk, requiring further investigation and potential regulatory reporting.\n",
-            "\n",
-            "**ESCALATION CRITERIA:**\n",
-            "- **IMMEDIATE INVESTIGATION REQUIRED** due to:\n",
-            "  - Risk score exceeding 0.75 with high confidence\n",
-            "  - Involvement of a comprehensively sanctioned country (Iran)\n",
-            "  - Multiple red flags without a reasonable business explanation\n",
-            "\n",
-            "**RECOMMENDATION:**\n",
-            "- Immediate filing of a Suspicious Activity Report (SAR) is recommended.\n",
-            "- Further investigation into the beneficial ownership and potential connections to sanctioned entities is advised.\n",
+            "- The transaction is marked as **IMMEDIATE INVESTIGATION REQUIRED** due to the high-risk score, involvement of a sanctioned jurisdiction, and multiple red flags without a reasonable business explanation. Immediate compliance actions, including SAR filing, are necessary to mitigate regulatory risks.\n",
             "\n",
             "**Supervisor**: Routing investigation to compliance_check agent for specialized analysis.\n",
             "\n",
@@ -1524,33 +1513,36 @@
             "\n",
             "**Filing Obligations:**\n",
             "- **CTR Required:** Yes - Transaction amount is $75,000, exceeding the $10,000 threshold.\n",
-            "- **SAR Required:** Yes - Due to high-risk jurisdiction (Iran) and high-risk customer profile, as well as the potential involvement of sanctioned entities.\n",
-            "- **Additional Reports:** OFAC screening is required for international transfers involving Iran.\n",
-            "- **Filing Deadlines:** Immediate filing of SAR is recommended due to the high-risk nature of the transaction.\n",
+            "- **SAR Required:** Yes - Due to high-risk jurisdiction (Iran) and high-risk customer rating.\n",
+            "- **Additional Reports:** OFAC screening required; potential FBAR if foreign accounts are involved.\n",
+            "- **Filing Deadlines:** Immediate SAR filing required; CTR filing within 15 days of transaction.\n",
             "\n",
             "**Regulatory Compliance Status:**\n",
-            "- **BSA Compliance:** At-Risk - Due to the high-risk jurisdiction and customer profile.\n",
-            "- **OFAC Screening:** Required - Must ensure no sanctioned entities are involved.\n",
-            "- **Enhanced Due Diligence:** Required - Due to the high-risk jurisdiction and customer profile.\n",
+            "- **BSA Compliance:** At-Risk - Due to high-risk jurisdiction and customer.\n",
+            "- **OFAC Screening:** Required - Iran is under comprehensive sanctions.\n",
+            "- **Enhanced Due Diligence:** Required - High-risk jurisdiction and customer.\n",
             "- **Record Retention:** 5-year BSA requirement.\n",
             "\n",
             "**Risk Mitigation Measures:**\n",
-            "- **Immediate Actions Required:** File SAR immediately, conduct OFAC screening, and perform enhanced due diligence.\n",
+            "- **Immediate Actions Required:** File SAR and CTR; conduct OFAC screening.\n",
             "- **Monitoring Requirements:** Ongoing surveillance of transactions involving high-risk jurisdictions.\n",
-            "- **Documentation Standards:** Maintain detailed records of the transaction and due diligence efforts.\n",
-            "- **Escalation Procedures:** Notify senior management and legal team due to the high-risk nature and potential regulatory implications.\n",
+            "- **Documentation Standards:** Maintain detailed records of due diligence and transaction details.\n",
+            "- **Escalation Procedures:** Notify senior management and legal team due to potential sanctions violations.\n",
             "\n",
             "**Regulatory Justification:**\n",
-            "- **Applicable Regulations:** 31 CFR 1020.320 - SAR requirements; 31 CFR 1060.300 - Reporting requirements under CISADA.\n",
-            "- **FinCEN Guidance:** Refer to FFIEC BSA/AML Examination Manual for due diligence and reporting requirements.\n",
-            "- **Enforcement Precedent:** Transactions involving Iran are subject to heightened scrutiny and regulatory requirements due to comprehensive sanctions.\n",
+            "- **Applicable Regulations:** 31 CFR 1020.320 - SAR requirements; 31 CFR 1060.300 - CISADA reporting.\n",
+            "- **FinCEN Guidance:** FFIEC BSA/AML Manual - Customer Due Diligence.\n",
+            "- **Enforcement Precedent:** Transactions involving Iran require strict compliance with OFAC sanctions.\n",
+            "\n",
+            "**COMPLIANCE STANDARDS:**\n",
+            "- **Conservative Approach:** Given the high-risk nature and regulatory complexity, a conservative compliance approach is recommended.\n",
+            "- **Exemptions/Safe Harbors:** None applicable due to the involvement of a sanctioned jurisdiction.\n",
             "\n",
             "**ESCALATION PROTOCOLS:**\n",
-            "- **IMMEDIATE LEGAL REVIEW REQUIRED** for potential OFAC violations or sanctions evasion.\n",
-            "- **SENIOR MANAGEMENT NOTIFICATION** for transactions involving high-risk jurisdictions and potential regulatory examination implications.\n",
+            "- **Immediate Legal Review Required:** Potential OFAC violations due to transaction with Iran.\n",
+            "- **Senior Management Notification:** Required due to high-risk jurisdiction and potential regulatory implications.\n",
             "\n",
-            "**DEFENSIVE COMPLIANCE:**\n",
-            "- Recommend the most conservative compliance approach due to the high-risk jurisdiction and customer profile, and the involvement of a comprehensively sanctioned country.\n",
+            "This transaction requires immediate compliance actions to mitigate regulatory risks and ensure adherence to applicable financial crime regulations.\n",
             "\n",
             "**Supervisor**: Routing investigation to report_generation agent for specialized analysis.\n",
             "\n",
@@ -1595,6 +1587,7 @@
             "👤 HumanMessage objects: 10\n",
             "🔧 ToolMessage objects: 7\n",
             "🛠️  Total tool calls: 7\n",
+            "⚠️  API did not provide RAGAS-validated messages, using original\n",
             "✅ Generated 1 agent investigation for evaluation!\n"
           ]
         }
@@ -1676,10 +1669,18 @@
         "        print(f\"🔧 ToolMessage objects: {tool_message_count}\") \n",
         "        print(f\"🛠️  Total tool calls: {tool_call_count}\")\n",
         "        \n",
-        "        # Store results for RAGAS evaluation\n",
-        "        agent_results = [{\n",
-        "            \"messages\": messages\n",
-        "        }]\n",
+        "        # Store results for RAGAS evaluation  \n",
+        "        # Check if API returned RAGAS-validated messages\n",
+        "        if \"ragas_validated_messages\" in api_result:\n",
+        "            print(f\"🎯 API provided {len(api_result['ragas_validated_messages'])} RAGAS-validated messages!\")\n",
+        "            agent_results = [{\n",
+        "                \"messages\": messages  # Keep original for comparison\n",
+        "            }]\n",
+        "        else:\n",
+        "            print(\"⚠️  API did not provide RAGAS-validated messages, using original\")\n",
+        "            agent_results = [{\n",
+        "                \"messages\": messages\n",
+        "            }]\n",
         "        \n",
         "        print(f\"✅ Generated {len(agent_results)} agent investigation for evaluation!\")\n",
         "        \n",
