test: Add comprehensive RAGAS evaluation test with LangChain objects
- Added new test cell (Cell 33) for direct RAGAS evaluation
- Makes fresh API call to test the updated LangChain object response
- Includes proper dict-to-LangChain conversion for RAGAS compatibility
- Tests MultiTurnSample creation and Tool Call Accuracy evaluation
- Provides comprehensive error handling and debugging output

This validates that the API changes properly resolve the RAGAS validation issues.

--- a/investigator_ai_ragas_evaluation.ipynb
+++ b/investigator_ai_ragas_evaluation.ipynb
@@ -2796,6 +2796,114 @@
       "execution_count": null,
       "metadata": {},
       "outputs": [],
+      "source": [
+        "### 🎯 Direct RAGAS Evaluation with LangChain Objects\n",
+        "\n",
+        "# Test RAGAS evaluation using the LangChain objects returned directly from API\n",
+        "print(\"🎯 Testing RAGAS evaluation with direct LangChain objects...\")\n",
+        "\n",
+        "# Make a fresh API call to get LangChain objects\n",
+        "investigation_request = {\n",
+        "    \"amount\": 95000.0,\n",
+        "    \"currency\": \"USD\", \n",
+        "    \"description\": \"Large international wire transfer to high-risk jurisdiction - RAGAS TEST\",\n",
+        "    \"customer_name\": \"RAGAS Test LLC\",\n",
+        "    \"account_type\": \"Business\",\n",
+        "    \"risk_rating\": \"High\",\n",
+        "    \"country_to\": \"Iran\"\n",
+        "}\n",
+        "\n",
+        "print(f\"📤 Making API call for RAGAS evaluation...\")\n",
+        "\n",
+        "try:\n",
+        "    # Make API call\n",
+        "    response = requests.post(\n",
+        "        f\"{API_BASE_URL}/investigate\",\n",
+        "        json=investigation_request,\n",
+        "        timeout=300,\n",
+        "        headers={\"Content-Type\": \"application/json\"}\n",
+        "    )\n",
+        "    \n",
+        "    if response.status_code == 200:\n",
+        "        fresh_api_result = response.json()\n",
+        "        print(\"✅ Investigation completed!\")\n",
+        "        \n",
+        "        # Get the ragas_validated_messages (should be properly serialized LangChain objects)\n",
+        "        ragas_messages = fresh_api_result.get(\"ragas_validated_messages\")\n",
+        "        if ragas_messages:\n",
+        "            print(f\"🎯 Got {len(ragas_messages)} properly structured messages for RAGAS\")\n",
+        "            \n",
+        "            # Convert back to LangChain objects for RAGAS \n",
+        "            from langchain_core.messages import AIMessage, HumanMessage, ToolMessage, SystemMessage\n",
+        "            \n",
+        "            def dict_to_lc_message(msg_dict):\n",
+        "                \"\"\"Convert properly structured dict back to LangChain message\"\"\"\n",
+        "                msg_type = msg_dict.get(\"type\", \"HumanMessage\")\n",
+        "                content = msg_dict.get(\"content\", \"\")\n",
+        "                name = msg_dict.get(\"name\")\n",
+        "                \n",
+        "                if msg_type == \"AIMessage\":\n",
+        "                    return AIMessage(\n",
+        "                        content=content,\n",
+        "                        tool_calls=msg_dict.get(\"tool_calls\"),\n",
+        "                        name=name\n",
+        "                    )\n",
+        "                elif msg_type == \"ToolMessage\":\n",
+        "                    return ToolMessage(\n",
+        "                        content=content,\n",
+        "                        tool_call_id=msg_dict.get(\"tool_call_id\"),\n",
+        "                        name=name\n",
+        "                    )\n",
+        "                elif msg_type == \"SystemMessage\":\n",
+        "                    return SystemMessage(content=content, name=name)\n",
+        "                else:\n",
+        "                    return HumanMessage(content=content, name=name)\n",
+        "            \n",
+        "            # Convert to LangChain objects\n",
+        "            langchain_messages = [dict_to_lc_message(msg) for msg in ragas_messages]\n",
+        "            print(f\"✅ Converted to {len(langchain_messages)} LangChain objects\")\n",
+        "            \n",
+        "            # Convert to RAGAS messages\n",
+        "            ragas_message_objects = convert_to_ragas_messages(langchain_messages)\n",
+        "            print(f\"✅ Converted to {len(ragas_message_objects)} RAGAS message objects\")\n",
+        "            \n",
+        "            # Test MultiTurnSample creation\n",
+        "            sample = MultiTurnSample(\n",
+        "                user_input=ragas_message_objects,\n",
+        "                reference_tool_calls=[\n",
+        "                    r.ToolCall(name=\"search_regulatory_documents\", args={\"query\": \"Iran sanctions compliance\"}),\n",
+        "                    r.ToolCall(name=\"calculate_transaction_risk\", args={\"amount\": 95000.0, \"country_to\": \"Iran\"}),\n",
+        "                    r.ToolCall(name=\"check_compliance_requirements\", args={\"amount\": 95000.0, \"risk_score\": 1.0})\n",
+        "                ],\n",
+        "            )\n",
+        "            print(\"✅ MultiTurnSample created successfully!\")\n",
+        "            \n",
+        "            # Test Tool Call Accuracy\n",
+        "            tool_accuracy_scorer = ToolCallAccuracy()\n",
+        "            tool_accuracy_scorer.llm = ChatOpenAI(model=\"gpt-4o-mini\")\n",
+        "            tool_accuracy_score = await tool_accuracy_scorer.multi_turn_ascore(sample)\n",
+        "            \n",
+        "            print(f\"🎯 Tool Call Accuracy Score: {tool_accuracy_score}\")\n",
+        "            print(\"🎉 RAGAS Tool Call Accuracy evaluation completed successfully!\")\n",
+        "            \n",
+        "        else:\n",
+        "            print(\"❌ No ragas_validated_messages in response\")\n",
+        "            \n",
+        "    else:\n",
+        "        print(f\"❌ API request failed: {response.status_code}\")\n",
+        "        print(f\"Error: {response.text}\")\n",
+        "        \n",
+        "except Exception as e:\n",
+        "    print(f\"❌ Error in RAGAS evaluation: {e}\")\n",
+        "    import traceback\n",
+        "    traceback.print_exc()\n"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "execution_count": null,
+      "metadata": {},
+      "outputs": [],
       "source": []
     }
   ],
